<resources>
    <string name="app_name">MIREA</string>
    <string name="input_str">Ввести значение</string>
    <string name="calculate">Рассчитать</string>
    <string name="logout">Вывести отладку</string>
    <string name="next_act">Передача данных</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_frag">Which type of list?</string>
</resources>