<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LinearLayout_activity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/Plus"
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:src="@drawable/plus" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:autofillHints="text"
        android:background="@color/light_blue"
        android:hint="@string/input_str"
        android:inputType="text"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/calculate"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/logout"
        />



</LinearLayout>